tests/error/poly_errors/arg_mismatch2.py
from guppylang.decorator import guppy

T = guppy.type_var("T")


@guppy.declare
def foo(x: tuple[T, T]) -> None:
    ...


@guppy
def main() -> None:
    foo(False)


guppy.compile(main)
