tests/error/poly_errors/arg_mismatch2.err
Error: Type mismatch (at $FILE:13:8)
   | 
11 | @guppy
12 | def main() -> None:
13 |     foo(False)
   |         ^^^^^ Expected argument of type `(?T, ?T)`, got `bool`

Guppy compilation failed due to 1 previous error
